[metadata]
name = waveglow
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Waveglow."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/waveglow.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    librosa
    plotly
    torch<=1.7.1
    scikit-image
    matplotlib
    tqdm
    gdown
    wget
    numpy
    scikit-learn
    scipy

[options.packages.find]
where = src
